# ResourceBuilder

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
include/: BaseCompilerParameters.h  ClangParameters.h  GPlusPlusParameters.h  utils.h
resource_builder/: CMakeLists.txt  main.cpp
resource_builder/application/: CMakeLists.txt  main.cpp
resource_builder/application/include/: CLCompilerParameters.h  ClangPlusPlusParameters.h
resource_builder/application/src/: CLCompilerParameters.cpp
resource_builder/core/: CMakeLists.txt
resource_builder/core/include/: BaseCompilerParameters.h
resource_builder/core/src/: CLCompilerParameters.cpp  utils.cpp
resource_builder/implementation_library/: CMakeLists.txt
resource_builder/implementation_library/include/: CLCompilerParameters.h  ResourceFileGenerator.h  utils.h
resource_builder/implementation_library/src/: ClangPlusPlusParameters.cpp  GPlusPlusParameters.cpp  ResourceFileGenerator.cpp  utils.cpp
resource_builder_core/: CMakeLists.txt
resource_builder_core/include/: ClangPlusPlusParameters.h  GPlusPlusParameters.h  utils.h
resource_builder_core/src/: BaseCompilerParameters.cpp  utils.cpp
scripts/: linux_default_build.sh  windows_default_build.bat
source/: CLCompilerParameters.cpp  ClangParameters.cpp  ClangPlusPlusParameters.cpp  GPlusPlusParameters.cpp  utils.cpp
tests/: CMakeLists.txt  test.py
tests/generate_and_run/: CMakeLists.txt  main.cpp
